adding escaping to string values
This commit adds HTML escaping to values within json objects since
we use them directly for rendering from the template into javascript
objects. If that isn't the main use, it might be better splitting
that functionality into a second tag.

--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
   "keywords": [
     "handlebars",
     "json"
-  ]
+  ],
+  "dependencies": {
+    "escape-html": "~1.0.1",
+    "traverse": "~0.6.6"
+  },
+  "devDependencies": {
+    "mocha": "~1.16.2"
+  }
 }
